# aztec-connect

./: .clang-format  .dockerignore  .eslintrc.js  .gitignore  .gitmodules  .prettierrc.js  404.html  CMakeLists.txt  Dockerfile  Dockerfile.arm64-linux-gcc  Dockerfile.clang  Dockerfile.cmake  Dockerfile.crosstool-ng-arm64  Dockerfile.linux-openmp  Dockerfile.x86-clang-openmp  Dockerfile.x86_64-win32  Dockerfile.x86_64-win32-mingw  LICENSE  PROJECT  README-publicversion.md  README.md  account_circuit.html  bootstrap-docker.sh  bootstrap.sh  bootstrap_docker.sh  build_manifest.json  build_manifest.sh  claim_circuit.html  defi_bridge_interface.html  docker-compose.yml  index.html  intro.html  join_split_circuit.html  make-master-public.sh  notes_and_nullifiers.html  primitives.html  print.html  regenerate.sh  rollup_circuit.html  rollup_contract.html  (+8 more)
aztec-connect-cpp/src/: CMakeLists.txt
aztec-connect-cpp/src/rollup/: CMakeLists.txt  constants.hpp
aztec-connect-cpp/src/rollup/ci_failsafe/: CMakeLists.txt
aztec-connect-cpp/src/rollup/db_cli/: CMakeLists.txt
aztec-connect-cpp/src/rollup/keygen/: CMakeLists.txt  main.cpp
aztec-connect-cpp/src/rollup/rollup_cli/: CMakeLists.txt  main.cpp
aztec-connect-cpp/src/rollup/tx_factory/: CMakeLists.txt  main.cpp
aztec-connect-cpp/src/rollup/world_state/: world_state.hpp
src/barretenberg/: CMakeLists.txt  asm_macros.hpp  assert.hpp  fq.hpp  fq12.hpp  fq2.hpp  fq6.hpp  fq_impl_asm.hpp  fq_impl_int128.hpp  fr.hpp  fr_impl.cpp  fr_impl_asm.hpp  fr_impl_int128.hpp  g1.hpp  g2.hpp  main.cpp  main_old.cpp  pairing.hpp  pippenger.md  scalar_multiplication.hpp  scrapbook.hpp  types.hpp  utils.hpp  wnaf.hpp
src/barretenberg/commitments/: kate.hpp
src/barretenberg/curves/bn254/: fq.hpp  fq12.hpp  fq2.hpp  fq6.hpp  fr.hpp  g1.hpp  g2.hpp  pairing.cpp  pairing.hpp  pairing_impl.hpp  scalar_multiplication.cpp  scalar_multiplication.hpp
src/barretenberg/curves/grumpkin/: grumpkin.cpp  grumpkin.hpp
src/barretenberg/fields/: asm_macros.hpp  field.hpp  field12.hpp  field2.hpp  field2_impl.hpp  field6.hpp  field_impl.hpp  field_impl_asm.tcc  field_impl_generic.hpp  field_impl_int128.tcc  field_impl_x64.hpp  fq.hpp  fq12.hpp  fq2.hpp  fq6.hpp  fq_impl_asm.hpp  fq_impl_int128.hpp  fr.hpp  fr_impl_asm.hpp  fr_impl_int128.hpp  new_field.hpp  new_field2.hpp  new_field2_impl.hpp  new_field_impl.hpp
src/barretenberg/groups/: affine_element.hpp  affine_group.hpp  affine_group_impl.hpp  element.hpp  element_impl.hpp  g1.hpp  g1_alt.hpp  g1_impl_asm.hpp  g1_impl_int128.hpp  g2.hpp  group.hpp  group_impl_asm.tcc  group_impl_int128.tcc  new_group.hpp  new_group_impl.hpp  pairing.cpp  pairing.hpp  scalar_multiplication.cpp  scalar_multiplication.hpp  wnaf.hpp
src/barretenberg/io/: io.hpp  streams.hpp
src/barretenberg/keccak/: hash_types.h  keccak.c  keccak.h  keccakf1600.c
src/barretenberg/misc_crypto/blake2s/: blake2-impl.hpp  blake2s.cpp  blake2s.hpp
src/barretenberg/misc_crypto/commitment/: pedersen_note.cpp  pedersen_note.hpp
src/barretenberg/misc_crypto/pedersen/: pedersen.cpp  pedersen.hpp
src/barretenberg/misc_crypto/schnorr/: c_bind.cpp  schnorr.hpp  schnorr.tcc
src/barretenberg/misc_crypto/sha256/: sha256.cpp  sha256.hpp
src/barretenberg/noir/: ast.hpp  ast_adapted.hpp  compiler.cpp  compiler.hpp  config.hpp  error_handler.hpp  expression_def.hpp  parse.cpp  parse.hpp  printer.cpp  printer.hpp  statement.cpp  statement.hpp  statement_def.hpp
src/barretenberg/noir/compiler/: compiler.cpp  compiler.hpp  compiler_context.hpp  expression_visitor.cpp  expression_visitor.hpp  format.hpp  function_call.cpp  function_call.hpp  function_statement_visitor.cpp  log.hpp  (+7 more)
src/barretenberg/polynomials/: evaluation_domain.cpp  evaluation_domain.hpp  fft.hpp  polynomial.cpp  polynomial.hpp  polynomial_arithmetic.cpp  polynomial_arithmetic.hpp  polynomials.cpp  polynomials.hpp
src/barretenberg/portability/: apple.hpp  linux.hpp  win32.hpp
src/barretenberg/transcript/: manifest.hpp  transcript.cpp  transcript.hpp
src/barretenberg/uint256/: uint256.hpp  uint256_impl.hpp  uint512.hpp
src/barretenberg/waffle/: challenge.hpp  linearizer.hpp  permutation.hpp  preprocess.hpp  prover.cpp  prover.hpp  verifier.hpp  waffle.cpp  waffle.hpp  waffle_types.hpp  widget_prover.cpp  widget_prover.hpp  widget_verifier.hpp
src/noir/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_bool_composer.cpp  test_composer.cpp  test_fft.cpp  test_fq.cpp  test_fq12.cpp  test_fq2.cpp  test_fq6.cpp  test_fr.cpp  test_g1.cpp  test_g2.cpp  test_grumpkin.cpp  test_helpers.hpp  test_io.cpp  test_logic_identities.cpp  test_mimc_composer.cpp  test_new_field.cpp  test_pairing.cpp  test_polynomial_arithmetic.cpp  test_polynomials.cpp  test_preprocess.cpp  test_prover.cpp  test_pstd_field.cpp  test_pstd_mimc.cpp  test_scalar_multiplication.cpp  test_schnorr.cpp  test_stdlib_bool.cpp  test_stdlib_field.cpp  test_stdlib_mimc.cpp  test_stdlib_uint32.cpp  test_transcript.cpp  test_verifier.cpp  test_waffle.cpp  test_widget_verifier.cpp  test_wnaf.cpp
test/benchmarks/: CMakeLists.txt  bench_barretenberg.cpp  bench_fields.cpp  bench_leveldb.cpp  bench_mimc.cpp  bench_pedersen.cpp  bench_plonk.cpp  bench_sha256.cpp
test/composer/: test_bool_composer.cpp  test_extended_composer.cpp  test_mimc_composer.cpp  test_standard_composer.cpp  test_turbo_composer.cpp
test/misc_crypto/: test_schnorr.cpp  test_sha256.cpp
test/noir/: sha256.noir  test_noir.cpp
test/proof_system/: test_prover.cpp  test_public_inputs.cpp  test_verifier.cpp
test/stdlib/: test_stdlib_bitarray.cpp  test_stdlib_blake2s.cpp  test_stdlib_bool.cpp  test_stdlib_byte_array.cpp  test_stdlib_field.cpp  test_stdlib_merkle_tree.cpp  test_stdlib_mimc.cpp  test_stdlib_pedersen.cpp  test_stdlib_pedersen_note.cpp  test_stdlib_schnorr.cpp  test_stdlib_sha256.cpp  test_stdlib_turbo_uint.cpp  test_stdlib_uint32.cpp
test/uint256/: test_uint256.cpp  test_uint512.cpp
test/widgets/: test_turbo_arithmetic_widget.cpp  test_turbo_fixed_base_widget.cpp  test_turbo_logic_widget.cpp  test_turbo_range_widget.cpp
(+5493 files in other folders)
